Check repl cursor before using SERVER-6762